Fixes about us spacing.

--- a/src/app/about-module/about/about.component.css
+++ b/src/app/about-module/about/about.component.css
@@ -8,6 +8,9 @@
     padding-left: 10px;
 }
 
+.card {
+    padding: 5px;
+}
 .about-us {
     height: 100%;
     overflow-y: auto;
